Updates with new tmux conf and bindings

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,59 +1,141 @@
+# Remap prefix from 'C-b' to 'C-i'
 unbind C-b
-set -g prefix C-a
+set-option -g prefix M-i
+bind-key M-i send-prefix
+
+# start with window 1 (instead of 0)
+set -g base-index 1
+
+# start with pane 1
+set -g pane-base-index 1
+
+# Vim style split panes using v and h
+# other replacements can be | for vertical and - for horizoantal
+bind -n M-v split-window -h
+bind -n M-s split-window -v
+unbind '"'
+unbind %
+
+# Fast reload config file
+bind r source-file ~/.tmux.conf
+
+# Switch panes using Alt-hjkl without prefix
+bind -n M-h select-pane -L
+bind -n M-j select-pane -D
+bind -n M-k select-pane -U
+bind -n M-l select-pane -R
+
+
+# Shift arrow to switch windows
+bind -n M-Left  previous-window
+bind -n M-Right next-window
+
+# No delay for escape key press
+set -sg escape-time 0
+
+# Enable mouse control (clickable windows, panes, resizable panes)
+set -g mouse-select-window on
+set -g mouse-select-pane on
+set -g mouse-resize-pane on
+
+# don't rename windows automatically
+set-option -g allow-rename off
+
+######################
+### DESIGN CHANGES ###
+######################
+
+# panes
+set -g pane-border-fg black
+set -g pane-active-border-fg grey
+
+## Status bar design
+# status line
+set -g status-utf8 on
+set -g status-justify left
+set -g status-bg default
+set -g status-fg colour12
+set -g status-interval 2
+
+# messaging
+set -g message-fg black
+set -g message-bg yellow
+set -g message-command-fg blue
+set -g message-command-bg black
+
+#window mode
+set -g mode-bg colour6
+set -g mode-fg colour0
+
+# window status
+set -g window-status-format " #F#I:#W#F "
+set -g window-status-current-format " #F#I:#W#F "
+set -g window-status-format "#[fg=magenta]#[bg=black] #I #[bg=cyan]#[fg=colour8] #W "
+set -g window-status-current-format "#[bg=brightmagenta]#[fg=colour8] #I #[fg=colour8]#[bg=colour14] #W "
+set -g window-status-current-bg colour0
+set -g window-status-current-fg colour11
+set -g window-status-current-attr dim
+set -g window-status-bg green
+set -g window-status-fg black
+set -g window-status-attr reverse
+
+# Info on left (I don't have a session display for now)
+set -g status-left ''
+
+# loud or quiet?
+set-option -g visual-activity off
+set-option -g visual-bell off
+set-option -g visual-silence off
+set-window-option -g monitor-activity off
+set-option -g bell-action none
+
 set -g default-terminal "screen-256color"
-set-option -g mouse-select-pane on
-set-option -g status-keys vi
-setw -g mode-keys vi
-setw -g mode-mouse on
-setw -g monitor-activity on
-bind-key a last-window
-set-option -g set-titles on
 
-bind K confirm-before "kill-window"
-bind | split-window -h
-bind v split-window -h
-bind s split-window
-bind < resize-pane -L 2
-bind > resize-pane -R 2
-bind - resize-pane -D 2
-bind + resize-pane -U 2
+# The modes {
+set -g clock-mode-colour colour135
+set -g mode-attr bold
+set -g mode-fg colour196
+set -g mode-bg colour238
 
-bind h select-pane -R
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -L
+# }
+# The panes {
 
-#### COLOUR (Solarized 256)
+set -g pane-border-bg colour235
+set -g pane-border-fg colour238
+set -g pane-active-border-bg colour236
+set -g pane-active-border-fg colour032
 
-# default statusbar colors
-set-option -g status-bg colour235 #base02
-set-option -g status-fg colour136 #yellow
-set-option -g status-attr default
+# }
+# The statusbar {
 
-## default window title colors
-set-window-option -g window-status-fg colour244 #base0
-set-window-option -g window-status-bg default
-#set-window-option -g window-status-attr dim
-#
-# active window title colors
-set-window-option -g window-status-current-fg colour166 #orange
-set-window-option -g window-status-current-bg default
-#set-window-option -g window-status-current-attr bright
-#
-## pane border
-set-option -g pane-border-fg colour235 #base02
-set-option -g pane-active-border-fg colour240 #base01
-#
-## message text
-set-option -g message-bg colour235 #base02
-set-option -g message-fg colour166 #orange
-#
-## pane number display
-set-option -g display-panes-active-colour colour33 #blue
-set-option -g display-panes-colour colour166 #orange
-#
-## clock
-set-window-option -g clock-mode-colour colour64 #green
+set -g status-position bottom
+set -g status-bg colour234
+set -g status-fg colour137
+set -g status-attr dim
+set -g status-left '#(whoami)'
+set -g status-right '#[fg=colour252,bg=colour235,bold] %a %b,%d #[fg=colour255,bg=colour237,bold] %H:%M:%S '
+set -g status-right-length 50
+set -g status-left-length 20
 
-# for powerline
-set -g default-terminal "screen-256color"
+set -g window-status-current-fg colour81
+set -g window-status-current-bg colour238
+set -g window-status-current-attr bold
+set -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
+
+set -g window-status-fg colour138
+set -g window-status-bg colour235
+set -g window-status-attr none
+set -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
+
+set -g window-status-bell-attr bold
+set -g window-status-bell-fg colour255
+set -g window-status-bell-bg colour1
+
+# }
+# The messages {
+
+set -g message-attr bold
+set -g message-fg colour232
+set -g message-bg colour166
+
+# }
