Subtle changes that arrive

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,3 +1,27 @@
+#,-------------------------------------------------------------------,
+#| Tmux configurations                                               |
+#| -------------------                                               |
+#|                                                                   |
+#| Key Bindings                                                      |
+#| ------------                                                      |
+#| 1.  tmux attach session_name                                      |
+#| 2.  M-v                            -- Vertical split pane         |
+#| 3.  M-s                            -- Horizoantal split pane      |
+#| 4.  M-[h/j/k/l]                    -- Movement Pane               |
+#| 5.  M-i ;                          -- Last active pane            |
+#| 6.  M-i C-o                        -- Rotate pane                 |
+#| 7.  M-i x                          -- Close pane                  |
+#| 8.  M-i r                          -- Refresh tmux                |
+#| 9.  M-i c                          -- Create window               |
+#| 10.  M-[left/right]                -- Movement window             |
+#| 11. M-i &                          -- Kill window                 |
+#| 12. M-i 1,2,3 ... 9                -- Switch window               |
+#| 13. M-i p,n                        -- Previous/next window        |
+#|                                                                   |
+#|-------------------------------------------------------------------|
+#|   Source: http://github.com/shashankgrovy/dotfiles                |
+#'-------------------------------------------------------------------'
+
 # Remap prefix from 'C-b' to 'C-i'
 unbind C-b
 set-option -g prefix M-i
@@ -34,9 +58,7 @@ bind -n M-Right next-window
 set -sg escape-time 0
 
 # Enable mouse control (clickable windows, panes, resizable panes)
-set -g mouse-select-window on
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
+set -g mouse on
 
 # don't rename windows automatically
 set-option -g allow-rename off
@@ -47,11 +69,11 @@ set-option -g allow-rename off
 
 # panes
 set -g pane-border-fg black
-set -g pane-active-border-fg grey
+set -g pane-active-border-fg red
 
 ## Status bar design
 # status line
-set -g status-utf8 on
+#set -g status-utf8 on
 set -g status-justify left
 set -g status-bg default
 set -g status-fg colour12
@@ -112,7 +134,7 @@ set -g status-position bottom
 set -g status-bg colour234
 set -g status-fg colour137
 set -g status-attr dim
-set -g status-left '#(whoami)'
+set -g status-left '#(hostname) '
 set -g status-right '#[fg=colour252,bg=colour235,bold] %a %b,%d #[fg=colour255,bg=colour237,bold] %H:%M:%S '
 set -g status-right-length 50
 set -g status-left-length 20
