--- a/i3/config
+++ b/i3/config
@@ -358,7 +358,7 @@ bindsym $mod+b exec --no-startup-id ~/.config/rofi-bluetooth/rofi-bluetooth
 exec_always compton -f
 
 # Set wallpaper
-exec_always --no-startup-id feh --bg-scale $HOME/Pictures/wallpaper.*
+exec_always --no-startup-id feh --bg-fill $HOME/Pictures/wallpaper.*
 
 # Polybar
 exec_always --no-startup-id ~/.config/polybar/launch.sh
