--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -1,3 +1,20 @@
+#
+#      _                 _           __  _       _    __ _ _
+#  ___| |__   __ _ _ __ | | _____   / /_| | ___ | |_ / _(_) | ___  ___
+# / __| '_ \ / _` | '_ \| |/ / __| / / _` |/ _ \| __| |_| | |/ _ \/ __|
+# \__ \ | | | (_| | | | |   <\__ \/ / (_| | (_) | |_|  _| | |  __/\__ \
+# |___/_| |_|\__,_|_| |_|_|\_\___/_/ \__,_|\___/ \__|_| |_|_|\___||___/
+#
+#
+# The zsh configuration, part of my dotfiles setup.
+#
+# Copyright 2023 © Shashank Srivastav
+#
+# More info at:
+# https://github.com/shashankgroovy/dotfiles
+#
+
+
 # Any items in the `env` entry below will be added as
 # environment variables.
 env:
@@ -8,21 +25,16 @@ env:
 font:
   # Normal (roman) font face
   normal:
-    family: Iosevka
+    family: Iosevka Nerd Font
     style: Regular
 
   # Point size
   # size: 6.0
-  # size: 8.0
-  size: 10.0
+  size: 8.0
+  # size: 10.0
   offset:
     x: 0 # for letter spacing
     y: 2 # for line spacing
-
-  # Thin stroke font rendering (macOS only)
-  # Thin strokes are suitable for retina displays, but for non-retina screens
-  # it is recommended to set `use_thin_strokes` to `false`
-  use_thin_strokes: true
 
 # If `true`, bold text is drawn using the bright color variants.
 # draw_bold_text_with_bright_colors: false
