Updates polybar things

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -16,8 +16,8 @@
 
 
 [colors]
-background = #282A2E
-background-alt = #373B41
+background = #88282A2E
+background-alt = #AA373B41
 foreground = #C5C8C6
 primary = #AAD94C
 secondary = #8ABEB7
@@ -142,11 +142,13 @@ type = internal/network
 interval = 5
 interface-type = wireless
 
+; 說
 format-connected = <label-connected>
-label-connected = %{F#AAD94C}說WIFI%{F-} %essid%
+label-connected = %{F#AAD94C}WIFI%{F-} %essid%
 
+; ﲁ
 format-disconnected = <label-disconnected>
-label-disconnected = %{F#F0C674}%ﲁ%%{F#707880} disconnected
+label-disconnected = %{F#F0C674}%{F#707880} disconnected
 
 [module/date]
 type = internal/date
