--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -154,8 +154,8 @@ label-disconnected = %{F#F0C674}%{F#707880} disconnected
 type = internal/date
 interval = 1
 
-date = %H:%M
-date-alt = %Y-%m-%d %H:%M:%S
+date = %Y-%m-%d %H:%M:%S
+date-alt = %H:%M
 
 label = %date%
 label-foreground = ${colors.primary}
@@ -218,7 +218,7 @@ format-discharging = %{F#FB8C00}<ramp-capacity> %{F-} <label-discharging>
 ;   <bar-capacity>
 ;   <ramp-capacity>
 ; New in version 3.6.0
-format-low = %{F#EB3945}<label-low> <animation-low>
+format-low = %{F#EB3945}<animation-low> %{F#EB3945} <label-low>
 
 ; Available tokens:
 ;   %percentage% (default) - is set to 100 if full-at is reached
@@ -277,7 +277,6 @@ animation-discharging-framerate = 500
 
 ; Only applies if <animation-low> is used
 ; New in version 3.6.0
-animation-low-0 = !
-animation-low-1 =
-animation-low-framerate = 200
-
+animation-low-0 = 
+animation-low-1 = 
+animation-low-framerate = 500
