Adds zathurarc and popup calendar for polybar

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -50,7 +50,7 @@ separator-foreground = ${colors.disabled}
 font-0 = Iosevka Nerd Font;2
 
 modules-left = xworkspaces xwindow
-modules-right = pulseaudio memory cpu battery wlan date
+modules-right = pulseaudio memory cpu battery wlan popup-calendar
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -110,6 +110,7 @@ label-volume = %percentage%%
 
 label-muted = muted
 label-muted-foreground = ${colors.disabled}
+use-ui-max = true
 
 [module/xkeyboard]
 type = internal/xkeyboard
@@ -148,14 +149,21 @@ label-connected = %{F#AAD94C}WIFI%{F-} %essid%
 
 ; ﲁ
 format-disconnected = <label-disconnected>
-label-disconnected = %{F#F0C674}%{F#707880} disconnected
+label-disconnected = %{F#F0C674}%{F#707880} offline
+
+[module/popup-calendar]
+type = custom/script
+exec = ~/.config/polybar/polybar-calendar.sh
+interval = 5
+click-left = ~/.config/polybar/polybar-calendar.sh --popup &
+format-foreground = ${colors.primary}
 
 [module/date]
 type = internal/date
 interval = 1
 
-date = %Y-%m-%d %H:%M:%S
-date-alt = %H:%M
+date = %A, %d %b %Y %H:%M:%S
+date-alt = %Y-%m-%d %H:%M:%S
 
 label = %date%
 label-foreground = ${colors.primary}
