--- a/i3/config
+++ b/i3/config
@@ -259,6 +259,11 @@ bindsym XF86AudioPrev exec playerctl previous
 # bindsym XF86 "$mode_display"
 bindsym $mod+p exec --no-startup-id python ~/.config/xrandr-layout/toggle.py
 
+# Control dunst notifications
+bindsym control+space exec dunstctl close
+bindsym control+shift+space exec dunstctl close-all
+bindsym control+grave exec dunstctl history-pop
+bindsym control+shift+period exec dunstctl context
 
 # Quick functions
 # ----------------
@@ -347,7 +352,6 @@ bindsym $mod+c exec --no-startup-id "rofi -show calc -modi calc -no-show-match -
 
 # Open power menu in rofi
 bindsym $mod+Escape exec --no-startup-id ~/.config/rofi-power/rofi-power
-
 
 # Launch
 # -------
