--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -50,7 +50,7 @@ separator-foreground = ${colors.disabled}
 font-0 = Iosevka Nerd Font;2
 
 modules-left = xworkspaces xwindow
-modules-right = pulseaudio memory cpu battery wlan popup-calendar
+modules-right = pulseaudio memory cpu redshift battery wlan popup-calendar
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -98,6 +98,20 @@ label-mounted = %{F#F0C674}%mountpoint%%{F-} %percentage_used%%
 
 label-unmounted = %mountpoint% not mounted
 label-unmounted-foreground = ${colors.disabled}
+
+[module/redshift]
+type = custom/script
+interval = 1
+exec = source ~/.config/polybar/redshift_conf.sh && ~/.config/polybar/redshift.sh --temperature
+click-left = source ~/.config/polybar/redshift_conf.sh && ~/.config/polybar/redshift.sh --toggle
+click-right = source ~/.config/polybar/redshift_conf.sh && ~/.config/polybar/redshift.sh --crimson
+scroll-up = source ~/.config/polybar/redshift_conf.sh && ~/.config/polybar/redshift.sh --increase
+scroll-down = source ~/.config/polybar/redshift_conf.sh && ~/.config/polybar/redshift.sh --decrease
+format-prefix = "🌓 "
+; format-prefix = " "
+; label = "%output%"
+; label-foreground = ${colors.primary}
+format-foreground = ${colors.primary}
 
 [module/pulseaudio]
 type = internal/pulseaudio
