--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,37 +1,15 @@
-# theme = "Nightfly"
+import = [
+    "~/.config/alacritty/themes/themes/ayu_dark.toml"
+]
 
 [bell]
 animation = "EaseOut"
 color = "#1cdc9a"
 duration = 400
 
-[colors.bright]
-black = "#7c8f8f"
-blue = "#82aaff"
-cyan = "#7fdbca"
-green = "#21c7a8"
-magenta = "#ae81ff"
-red = "#ff5874"
-white = "#d6deeb"
-yellow = "#ecc48d"
-
 [colors.cursor]
 cursor = "#9ca1aa"
 text = "#fafafa"
-
-[colors.normal]
-black = "#1d3b53"
-blue = "#82aaff"
-cyan = "#7fdbca"
-green = "#a1cd5e"
-magenta = "#c792ea"
-red = "#fc514e"
-white = "#a1aab8"
-yellow = "#e3d18a"
-
-[colors.primary]
-background = "#011627"
-foreground = "#acb4c2"
 
 [colors.selection]
 background = "#b2ceee"
@@ -48,6 +26,7 @@ TERM = "alacritty"
 
 [font]
 size = 8.0
+# size = 10.0
 
 [font.bold]
 family = "Iosevka Nerd Font"
